--- a/index.html
+++ b/index.html
@@ -2,10 +2,94 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Meu Site UniTV</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>UniTV Recargas</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #fdf2e9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #ff6600;
+      color: white;
+      padding: 20px;
+    }
+    h1 {
+      margin: 0;
+    }
+    .container {
+      padding: 20px;
+    }
+    table {
+      margin: 20px auto;
+      border-collapse: collapse;
+      width: 80%;
+      max-width: 500px;
+    }
+    table, th, td {
+      border: 1px solid #ff6600;
+    }
+    th, td {
+      padding: 12px;
+      text-align: center;
+    }
+    th {
+      background-color: #ff6600;
+      color: white;
+    }
+    .whatsapp-btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 20px;
+      background-color: #25d366;
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 8px;
+    }
+    .whatsapp-btn:hover {
+      background-color: #1ebc5b;
+    }
+  </style>
 </head>
 <body>
-  <h1>Site funcionando! 🚀</h1>
-  <p>Agora o GitHub Pages vai abrir direitinho.</p>
+  <header>
+    <h1>UniTV Recargas</h1>
+    <p>Seu acesso rápido e fácil!</p>
+  </header>
+
+  <div class="container">
+    <h2>Tabela de Recargas</h2>
+    <table>
+      <tr>
+        <th>Plano</th>
+        <th>Preço</th>
+      </tr>
+      <tr>
+        <td>Mensal</td>
+        <td>R$ 25,00</td>
+      </tr>
+      <tr>
+        <td>Trimestral</td>
+        <td>R$ 70,00</td>
+      </tr>
+      <tr>
+        <td>Semestral</td>
+        <td>R$ 130,00</td>
+      </tr>
+      <tr>
+        <td>Anual</td>
+        <td>R$ 240,00</td>
+      </tr>
+    </table>
+
+    <a class="whatsapp-btn" href="https://wa.me/5522999291708" target="_blank">
+      💬 Fazer Recarga no WhatsApp
+    </a>
+  </div>
 </body>
 </html>
