--- a/index.html
+++ b/index.html
@@ -1,98 +1,143 @@
 
-<!DOCTYPE html>
+        <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UniTV Recargas</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="logo.png">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #fff5f5;
+      background: #fafafa;
       color: #333;
     }
     header {
-      background: url('banner.jpg') no-repeat center center;
-      background-size: cover;
+      background: #b71c1c;
+      color: white;
+      padding: 25px 0;
       text-align: center;
-      padding: 40px 20px;
+      box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
     }
     header img {
-      max-height: 80px;
+      max-width: 100px;
+      margin-bottom: 10px;
     }
-    header h1 {
-      margin: 10px 0 0;
-      font-size: 28px;
-      color: #fff;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+    h1 {
+      margin: 0;
+      font-size: 30px;
     }
-    header p {
-      color: #f1f1f1;
+    p.subtitle {
       margin: 5px 0 0;
-      font-size: 18px;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
+      font-size: 16px;
+      color: #ffe5e5;
     }
-    .container {
-      max-width: 800px;
-      margin: 20px auto;
+    section {
+      padding: 40px 20px;
       text-align: center;
-      padding: 20px;
     }
     h2 {
-      color: #d90429;
+      color: #b71c1c;
+      margin-bottom: 25px;
+      font-size: 24px;
     }
     table {
-      width: 100%;
+      width: 85%;
+      margin: 0 auto 30px;
       border-collapse: collapse;
-      margin: 20px 0;
-    }
-    table, th, td {
-      border: 2px solid #d90429;
+      box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      overflow: hidden;
     }
     th {
-      background-color: #d90429;
+      background: #b71c1c;
       color: white;
-      padding: 10px;
+      padding: 14px;
+      font-size: 18px;
     }
     td {
-      padding: 10px;
-      background-color: #fff;
+      padding: 14px;
+      background: white;
+      border-bottom: 1px solid #eee;
+    }
+    tr:last-child td {
+      border-bottom: none;
+    }
+    .contact-box {
+      background: #fff;
+      border: 1px solid #b71c1c;
+      padding: 20px;
+      margin: 20px auto 35px;
+      width: 85%;
+      border-radius: 10px;
+      box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
+      text-align: left;
+    }
+    .contact-box p {
+      margin: 10px 0;
+      font-size: 16px;
+    }
+    .contact-box strong {
+      color: #b71c1c;
     }
     .whatsapp-btn {
       display: inline-block;
-      padding: 15px 25px;
-      background-color: #25d366;
-      color: #fff;
-      font-size: 18px;
+      background: #25d366;
+      color: white;
+      padding: 14px 28px;
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
+      font-size: 18px;
       transition: 0.3s;
+      box-shadow: 0px 2px 6px rgba(0,0,0,0.2);
     }
     .whatsapp-btn:hover {
-      background-color: #1ebe5d;
+      background: #1ebc57;
     }
+
+    /* BOTÃO FIXO NO CANTO */
+    .whatsapp-fixed {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25d366;
+      color: white;
+      padding: 14px 22px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+      box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
+      transition: 0.3s;
+      z-index: 1000;
+    }
+    .whatsapp-fixed:hover {
+      background: #1ebc57;
+    }
+
     footer {
-      background-color: #d90429;
-      color: #fff;
-      text-align: center;
-      padding: 15px;
+      background: #b71c1c;
+      color: white;
+      padding: 18px;
       margin-top: 30px;
+      font-size: 14px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-
   <header>
     <img src="logo.png" alt="Logo UniTV">
     <h1>UniTV Recargas</h1>
-    <p>Seu acesso rápido e fácil!</p>
+    <p class="subtitle">Seu acesso rápido e fácil!</p>
   </header>
 
-  <div class="container">
-    <h2>Tabela de Planos</h2>
+  <section>
+    <h2>💳 Tabela de Planos</h2>
     <table>
       <tr>
         <th>Plano</th>
@@ -112,14 +157,21 @@
       </tr>
     </table>
 
-    <a class="whatsapp-btn" href="https://wa.me/5522999291708" target="_blank">
-      💬 Chamar no WhatsApp
-    </a>
-  </div>
+    <!-- Caixa de contato -->
+    <div class="contact-box">
+      <p><strong>📞 WhatsApp:</strong> +55 22 99284-4880</p>
+      <p><strong>📧 E-mail:</strong> ldcellsaqua@gmail.com</p>
+      <p><strong>🔑 Chave PIX:</strong> ldcellsaqua@gmail.com</p>
+    </div>
+
+    <a class="whatsapp-btn" href="https://wa.me/5522992844880" target="_blank">💬 Chamar no WhatsApp</a>
+  </section>
+
+  <!-- BOTÃO FIXO -->
+  <a class="whatsapp-fixed" href="https://wa.me/5522992844880" target="_blank">💬 WhatsApp</a>
 
   <footer>
-    <p>© 2025 UniTV Recargas - Todos os direitos reservados</p>
+    © 2025 UniTV Recargas - Todos os direitos reservados
   </footer>
-
 </body>
 </html>
