--- a/index.html
+++ b/index.html
@@ -1,131 +1,111 @@
 
-        <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UniTV Recargas</title>
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="logo.png">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #fafafa;
+      text-align: center;
+      background: linear-gradient(135deg, #8b0000, #ff0000);
       color: #333;
     }
+
     header {
-      background: #b71c1c;
-      color: white;
-      padding: 25px 0;
-      text-align: center;
-      box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
-    }
-    header img {
-      max-width: 100px;
-      margin-bottom: 10px;
-    }
-    h1 {
-      margin: 0;
-      font-size: 30px;
-    }
-    p.subtitle {
-      margin: 5px 0 0;
-      font-size: 16px;
-      color: #ffe5e5;
-    }
-    section {
-      padding: 40px 20px;
-      text-align: center;
-    }
-    h2 {
-      color: #b71c1c;
-      margin-bottom: 25px;
-      font-size: 24px;
-    }
-    table {
-      width: 85%;
-      margin: 0 auto 30px;
-      border-collapse: collapse;
-      box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
-      border-radius: 8px;
-      overflow: hidden;
-    }
-    th {
-      background: #b71c1c;
-      color: white;
-      padding: 14px;
-      font-size: 18px;
-    }
-    td {
-      padding: 14px;
-      background: white;
-      border-bottom: 1px solid #eee;
-    }
-    tr:last-child td {
-      border-bottom: none;
-    }
-    .contact-box {
-      background: #fff;
-      border: 1px solid #b71c1c;
       padding: 20px;
-      margin: 20px auto 35px;
-      width: 85%;
-      border-radius: 10px;
-      box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
-      text-align: left;
-    }
-    .contact-box p {
-      margin: 10px 0;
-      font-size: 16px;
-    }
-    .contact-box strong {
-      color: #b71c1c;
-    }
-    .whatsapp-btn {
-      display: inline-block;
-      background: #25d366;
-      color: white;
-      padding: 14px 28px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 18px;
-      transition: 0.3s;
-      box-shadow: 0px 2px 6px rgba(0,0,0,0.2);
-    }
-    .whatsapp-btn:hover {
-      background: #1ebc57;
     }
 
-    /* BOTÃO FIXO NO CANTO */
-    .whatsapp-fixed {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25d366;
-      color: white;
-      padding: 14px 22px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 16px;
-      box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
-      transition: 0.3s;
-      z-index: 1000;
+    header img {
+      width: 100px;
+      margin-bottom: 10px;
     }
-    .whatsapp-fixed:hover {
-      background: #1ebc57;
+
+    h1 {
+      font-size: 26px;
+      color: white;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
+    }
+
+    .planos {
+      margin: 20px auto;
+      max-width: 400px;
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      overflow: hidden;
+    }
+
+    .planos h2 {
+      background: #b30000;
+      color: white;
+      padding: 12px;
+      margin: 0;
+      font-size: 20px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    table th, table td {
+      padding: 12px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    table tr:last-child td {
+      border-bottom: none;
+    }
+
+    .contato {
+      margin: 20px auto;
+      max-width: 400px;
+      padding: 15px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      text-align: left;
+    }
+
+    .contato p {
+      margin: 8px 0;
+      font-size: 15px;
+    }
+
+    .contato span {
+      font-weight: bold;
+      color: #b30000;
     }
 
     footer {
-      background: #b71c1c;
+      margin-top: 20px;
+      padding: 15px;
+      background: #b30000;
       color: white;
-      padding: 18px;
-      margin-top: 30px;
       font-size: 14px;
-      text-align: center;
+    }
+
+    /* Botão flutuante WhatsApp */
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      color: white;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 30px;
+      text-decoration: none;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      z-index: 1000;
     }
   </style>
 </head>
@@ -133,11 +113,11 @@
   <header>
     <img src="logo.png" alt="Logo UniTV">
     <h1>UniTV Recargas</h1>
-    <p class="subtitle">Seu acesso rápido e fácil!</p>
+    <p style="color: #fff;">Seu acesso rápido e fácil!</p>
   </header>
 
-  <section>
-    <h2>💳 Tabela de Planos</h2>
+  <section class="planos">
+    <h2>📋 Tabela de Planos</h2>
     <table>
       <tr>
         <th>Plano</th>
@@ -156,19 +136,15 @@
         <td>R$ 120</td>
       </tr>
     </table>
-
-    <!-- Caixa de contato -->
-    <div class="contact-box">
-      <p><strong>📞 WhatsApp:</strong> +55 22 99284-4880</p>
-      <p><strong>📧 E-mail:</strong> ldcellsaqua@gmail.com</p>
-      <p><strong>🔑 Chave PIX:</strong> ldcellsaqua@gmail.com</p>
-    </div>
-
-    <a class="whatsapp-btn" href="https://wa.me/5522992844880" target="_blank">💬 Chamar no WhatsApp</a>
   </section>
 
-  <!-- BOTÃO FIXO -->
-  <a class="whatsapp-fixed" href="https://wa.me/5522992844880" target="_blank">💬 WhatsApp</a>
+  <section class="contato">
+    <p><span>📞 WhatsApp:</span> +55 22 99284-4880</p>
+    <p><span>📧 E-mail:</span> ldcellsaqua@gmail.com</p>
+    <p><span>🔑 Chave PIX:</span> ldcellsaqua@gmail.com</p>
+  </section>
+
+  <a href="https://wa.me/5522992844880" class="whatsapp-float" target="_blank">💬</a>
 
   <footer>
     © 2025 UniTV Recargas - Todos os direitos reservados
