--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <img src="mensal.png" alt="Plano Mensal">
       <p class="preco-antigo">R$ 28,00 <span class="desconto">-15.4%</span></p>
       <p class="preco">R$ 24,90</p>
-      <a href="#" class="btn">COMPRAR AGORA</a>
+      <a href="https://wa.me/5522992844880?text=Ol%C3%A1%2C+quero+assinar+o+plano+Mensal+UniTV+por+R%24+24%2C90" class="btn">COMPRAR AGORA</a>
     </div>
 
     <!-- Plano Trimestral -->
@@ -122,7 +122,7 @@
       <img src="trimestral.png" alt="Plano Trimestral">
       <p class="preco-antigo">R$ 75,00 <span class="desconto">-6.83%</span></p>
       <p class="preco">R$ 59,90</p>
-      <a href="#" class="btn">COMPRAR AGORA</a>
+      <a href="https://wa.me/5522992844880?text=Ol%C3%A1%2C+quero+assinar+o+plano+Trimestral+UniTV+por+R%24+59%2C90" class="btn">COMPRAR AGORA</a>
     </div>
 
     <!-- Plano Anual -->
@@ -130,11 +130,12 @@
       <img src="anual.png" alt="Plano Anual">
       <p class="preco-antigo">R$ 190,00 <span class="desconto">-6.73%</span></p>
       <p class="preco">R$ 169,90</p>
-      <a href="#" class="btn">COMPRAR AGORA</a>
+      <a href="https://wa.me/5522992844880?text=Ol%C3%A1%2C+quero+assinar+o+plano+Anual+UniTV+por+R%24+169%2C90" class="btn">COMPRAR AGORA</a>
     </div>
 
   </section>
 
+  <!-- Botão flutuante WhatsApp -->
   <a href="https://wa.me/5522992844880" class="whatsapp-float">💬</a>
 
 </body>
