--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -10,73 +9,117 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #fff;
+      background: linear-gradient(135deg, #b30000, #ff4d4d);
       text-align: center;
-      color: #222;
+      color: #fff;
     }
 
     header {
-      background: #b30000;
-      padding: 15px;
-      color: white;
+      padding: 20px;
     }
 
     header img {
-      width: 90px;
+      width: 120px;
       margin-bottom: 10px;
     }
 
     h1 {
       margin: 0;
-      font-size: 22px;
+      font-size: 26px;
     }
 
     .planos {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
       padding: 20px;
     }
 
     .card {
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      padding: 15px;
-      margin: 15px auto;
-      max-width: 350px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      background: white;
+      background: #fff;
+      color: #222;
+      border-radius: 15px;
+      padding: 20px;
+      width: 280px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+      position: relative;
+      transition: transform 0.3s;
     }
 
-    .card img {
-      width: 100%;
-      border-radius: 10px;
+    .card:hover {
+      transform: scale(1.05);
     }
 
-    .preco-antigo {
-      text-decoration: line-through;
-      color: #777;
-      font-size: 14px;
-    }
-
-    .desconto {
+    .selo {
+      position: absolute;
+      top: -12px;
+      right: -12px;
+      background: gold;
       color: #b30000;
+      font-size: 12px;
       font-weight: bold;
-      margin-left: 5px;
-      font-size: 14px;
+      padding: 6px 10px;
+      border-radius: 50px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
     }
 
     .preco {
-      font-size: 22px;
+      font-size: 28px;
       font-weight: bold;
-      margin: 8px 0;
+      margin: 10px 0;
+      color: #b30000;
     }
 
     .btn {
       display: inline-block;
       background: #b30000;
       color: white;
-      padding: 12px 18px;
+      padding: 12px 20px;
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
+      margin-top: 10px;
+    }
+
+    .btn:hover {
+      background: #ff0000;
+    }
+
+    /* Formas de Pagamento */
+    .pagamento {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 30px 20px;
+      margin: 30px 0 60px;
+      border-radius: 15px;
+    }
+
+    .pagamento h2 {
+      margin-bottom: 20px;
+      font-size: 22px;
+      color: #fff;
+    }
+
+    .icones {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      flex-wrap: wrap;
+    }
+
+    .icone {
+      background: #fff;
+      color: #b30000;
+      font-weight: bold;
+      padding: 15px 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      font-size: 16px;
+    }
+
+    .pix {
+      border: 2px solid #00cc66;
+      color: #00cc66;
     }
 
     /* Botão WhatsApp fixo */
@@ -102,37 +145,48 @@
 <body>
 
   <header>
+    <!-- LOGO CENTRALIZADO -->
     <img src="logo.png" alt="UniTV Logo">
     <h1>Recargas UniTV</h1>
-    <p>Ativação imediata após pagamento</p>
+    <p>Ative sua TV em segundos!</p>
   </header>
 
   <section class="planos">
 
     <!-- Plano Mensal -->
     <div class="card">
-      <img src="mensal.png" alt="Plano Mensal">
-      <p class="preco-antigo">R$ 28,00 <span class="desconto">-15.4%</span></p>
-      <p class="preco">R$ 24,90</p>
-      <a href="https://wa.me/5522992844880?text=Ol%C3%A1%2C+quero+assinar+o+plano+Mensal+UniTV+por+R%24+24%2C90" class="btn">COMPRAR AGORA</a>
+      <div class="selo">Acesso imediato</div>
+      <h2>Plano Mensal</h2>
+      <p class="preco">R$ 25,00</p>
+      <a href="https://wa.me/5522992844880?text=Ol%C3%A1,+quero+assinar+o+plano+Mensal+UniTV+por+R$25" class="btn">COMPRAR AGORA</a>
     </div>
 
     <!-- Plano Trimestral -->
     <div class="card">
-      <img src="trimestral.png" alt="Plano Trimestral">
-      <p class="preco-antigo">R$ 75,00 <span class="desconto">-6.83%</span></p>
-      <p class="preco">R$ 59,90</p>
-      <a href="https://wa.me/5522992844880?text=Ol%C3%A1%2C+quero+assinar+o+plano+Trimestral+UniTV+por+R%24+59%2C90" class="btn">COMPRAR AGORA</a>
+      <div class="selo">Mais vendido</div>
+      <h2>Plano Trimestral</h2>
+      <p class="preco">R$ 65,00</p>
+      <a href="https://wa.me/5522992844880?text=Ol%C3%A1,+quero+assinar+o+plano+Trimestral+UniTV+por+R$65" class="btn">COMPRAR AGORA</a>
     </div>
 
-    <!-- Plano Anual -->
+    <!-- Plano Semestral -->
     <div class="card">
-      <img src="anual.png" alt="Plano Anual">
-      <p class="preco-antigo">R$ 190,00 <span class="desconto">-6.73%</span></p>
-      <p class="preco">R$ 169,90</p>
-      <a href="https://wa.me/5522992844880?text=Ol%C3%A1%2C+quero+assinar+o+plano+Anual+UniTV+por+R%24+169%2C90" class="btn">COMPRAR AGORA</a>
+      <div class="selo">Melhor custo-benefício</div>
+      <h2>Plano Semestral</h2>
+      <p class="preco">R$ 120,00</p>
+      <a href="https://wa.me/5522992844880?text=Ol%C3%A1,+quero+assinar+o+plano+Semestral+UniTV+por+R$120" class="btn">COMPRAR AGORA</a>
     </div>
 
+  </section>
+
+  <!-- Formas de Pagamento -->
+  <section class="pagamento">
+    <h2>Formas de Pagamento</h2>
+    <div class="icones">
+      <div class="icone pix">PIX: SEU-EMAIL@PIX.COM</div>
+      <div class="icone">Cartão</div>
+      <div class="icone">Boleto</div>
+    </div>
   </section>
 
   <!-- Botão flutuante WhatsApp -->
