--- a/index.html
+++ b/index.html
@@ -194,3 +194,12 @@
 
 </body>
 </html>
+<!-- Formas de Pagamento -->
+<section class="pagamento">
+  <h2>Formas de Pagamento</h2>
+  <div class="icones">
+    <div class="icone pix">PIX: ldcellsaqua@gmail.com</div>
+    <div class="icone">Cartão</div>
+    <div class="icone">Boleto</div>
+  </div>
+</section>
